--- a/assets/section-videos.css
+++ b/assets/section-videos.css
@@ -107,8 +107,14 @@ justify-items: center;
     left:20px;
 }
 video{
-  width: 300px;
-  height: 300px;
+  width: 335px;
+  height: 335px;
+}
+.video-wrapper{
+  max-width: 335px;
+  max-height: 335px;
+
+  
 }
 }
 @media screen and (min-width:1211px){
