--- a/sections/contact-info.liquid
+++ b/sections/contact-info.liquid
@@ -77,7 +77,8 @@
           </div>
         </div>
         <div class="contact-div3">
-          <button class="button-small">book now</button>
+          <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button-small" style="text-align: center; text-decoration: none;">BOOK NOW</a>
+          <!-- <button class="button-small">book now</button> -->
         </div>
         <div class="contact-div4">
           <p class="info-text">
@@ -157,7 +158,8 @@
           </div>
         </div>
         <div class="contact-div3">
-          <button class="button-small">book now</button>
+          <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button-small" style="text-align: center; text-decoration: none;">BOOK NOW</a>
+          <!-- <button class="button-small">book now</button> -->
         </div>
         <div class="contact-div4">
           <p class="info-text">
