--- a/sections/services-rules.liquid
+++ b/sections/services-rules.liquid
@@ -99,7 +99,7 @@
         "default":"NO SHOW POLICY"
       },
       {
-        "id": "rule3text",
+        "id": "rule3-text",
         "type": "richtext",
         "label": "Rule 3 description",
         "default":"<p>If you are more then 10 minutes late your appointment may be cancelled, as it’s not possible to give adequate service in the remaining time. If you are permanently late for your scheduled appointments, the Cancellation or No Show policies described below may be applied.</p> "
