--- a/snippets/article-barber.liquid
+++ b/snippets/article-barber.liquid
@@ -18,7 +18,7 @@
         <div class="article-card__image">
           <div class="barber-image-wrapper">
             <img
-            src="{{ article.image | img_url: 'large'  }}"
+            src="{{ article.image | img_url: width: 580  }}"
             alt="{{ article.image.src.alt | escape }}"
             loading="lazy"
             class="barber-image"
