--- a/sections/main-transformation.liquid
+++ b/sections/main-transformation.liquid
@@ -34,31 +34,31 @@
   </div>
   <div id="before-after-slider" class="mySlides slides">
     <div id="before-image" class="beforeImage">
-      <img src="{{section.settings.beforeimage-1| img_url: 'large'}}" alt="before" class="object-fit-cover"/>
+      <img src="{{section.settings.beforeimage-1| image_url: height:674 }}" alt="before" class="object-fit-cover"/>
     </div>
     <div id="after-image" class="afterImage">
       
-      <img src="{{section.settings.afterimage-1| img_url: 'large'}}" alt="After" class="object-fit-cover"/>
+      <img src="{{section.settings.afterimage-1| image_url: height:674 }}" alt="After" class="object-fit-cover"/>
     </div>
     <div id="resizer" class="resizer"></div>
   </div>
   <div id="before-after-slider" class="mySlides slides">
     <div id="before-image" class="beforeImage">
-      <img src="{{section.settings.beforeimage-2| img_url: 'large'}}" alt="before" class="object-fit-cover"/>
+      <img src="{{section.settings.beforeimage-2| image_url: height:674}}" alt="before" class="object-fit-cover"/>
     </div>
     <div id="after-image" class="afterImage">
       
-      <img src="{{section.settings.afterimage-2| img_url: 'large'}}" alt="After" class="object-fit-cover"/>
+      <img src="{{section.settings.afterimage-2| image_url: height:674}}" alt="After" class="object-fit-cover"/>
     </div>
     <div id="resizer" class="resizer"></div>
   </div>
   <div id="before-after-slider" class="mySlides slides">
     <div id="before-image" class="beforeImage">
-      <img src="{{section.settings.beforeimage-3| img_url: 'large'}}" alt="before" class="object-fit-cover"/>
+      <img src="{{section.settings.beforeimage-3| image_url: height:674}}" alt="before" class="object-fit-cover"/>
     </div>
     <div id="after-image" class="afterImage">
       
-      <img src="{{section.settings.afterimage-3| img_url: 'large'}}" alt="After" class="object-fit-cover"/>
+      <img src="{{section.settings.afterimage-3| image_url: height:674}}" alt="After" class="object-fit-cover"/>
     </div>
     <div id="resizer" class="resizer"></div>
   </div>
