--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -21,10 +21,10 @@
         <img src="{{'logo-white.svg'| asset_url }}" alt="Brothers barbershop logo" class="footer-logo">
         <div class="social-wrapper">
           <div class="social-icon-wrapper">
-            <a href="#" target="blank"><img src="{{'instagram.svg'| asset_url }}" alt="Instagram icon" class="instagram-icon"></a>
+            <a href="https://www.instagram.com/brothersbarbershopvienna/" target="blank"><img src="{{'instagram.svg'| asset_url }}" alt="Instagram icon" class="instagram-icon"></a>
           </div>
           <div class="social-icon-wrapper">
-            <a href="#" target="blank"><img src="{{'facebook-icon.svg'| asset_url }}" alt="Facebook icon" class="facebook-icon"></a>
+            <a href="https://www.facebook.com/barbershopwien" target="blank"><img src="{{'facebook-icon.svg'| asset_url }}" alt="Facebook icon" class="facebook-icon"></a>
           </div>
         </div>
       </div>
