--- a/sections/main-expectations.liquid
+++ b/sections/main-expectations.liquid
@@ -6,25 +6,25 @@
     <div class="expectation-icon-grid">
       <div class="expectation-div1 center">
         <div class="icon-border">
-          <img src="{{section.settings.icon-1| img_url: 'large'}}" alt="Great cut icon" class="expectation-icon">
+          <img src="{{section.settings.icon-1| image_url: height:100 }}" alt="Great cut icon" class="expectation-icon">
         </div>
         <h3 class="icon-description">{{ section.settings.expectation-1 }}</h3>
       </div>
       <div class="expectation-div2 center">
         <div class="icon-border">
-          <img src="{{section.settings.icon-2| img_url: 'large'}}" alt="Favorite drink icon" class="expectation-icon">
+          <img src="{{section.settings.icon-2| image_url: height:100 }}" alt="Favorite drink icon" class="expectation-icon">
         </div>
         <h3 class="icon-description">{{ section.settings.expectation-2 }}</h3>
       </div>
       <div class="expectation-div3 center">
         <div class="icon-border">
-          <img src="{{section.settings.icon-3| img_url: 'large'}}" alt="Good conversation icon" class="expectation-icon">
+          <img src="{{section.settings.icon-3| image_url: height:100 }}" alt="Good conversation icon" class="expectation-icon">
         </div>
         <h3 class="icon-description">{{ section.settings.expectation-3 }}</h3>
       </div>
       <div class="expectation-div4 center">
         <div class="icon-border">
-          <img src="{{section.settings.icon-4| img_url: 'large'}}" alt="Relax icon" class="expectation-icon">
+          <img src="{{section.settings.icon-4| image_url: height:100 }}" alt="Relax icon" class="expectation-icon">
         </div>
         <h3 class="icon-description">{{ section.settings.expectation-4 }}</h3>
       </div>
