--- a/sections/cupon-videos.liquid
+++ b/sections/cupon-videos.liquid
@@ -8,7 +8,7 @@
     <div class="video-grid">
       <div class="video-div1">
         <div class="video-wrapper">
-          <video id="video1" muted>
+          <video id="video1" >
             <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay1">
@@ -23,7 +23,7 @@
       </div>
       <div class="video-div2">
         <div class="video-wrapper">
-          <video id="video2" muted>
+          <video id="video2" >
             <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay2">
@@ -38,7 +38,7 @@
       </div>
       <div class="video-div3">
         <div class="video-wrapper">
-          <video id="video3" muted>
+          <video id="video3" >
             <source src="{{'videoCompressed3.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay3">
