--- a/assets/component-cart.css
+++ b/assets/component-cart.css
@@ -137,9 +137,7 @@ cart-items {
   }
 }
 
-.cart__ctas button {
-  width: 100%;
-}
+
 
 .cart__ctas > *:not(noscript:first-child) + * {
   margin-top: 1rem;
@@ -174,9 +172,9 @@ cart-items {
   display: block;
 }
 
-.cart__checkout-button {
+/* .cart__checkout-button {
   max-width: 36rem;
-}
+} */
 
 .cart__ctas {
   text-align: center;
