--- a/sections/services-services.liquid
+++ b/sections/services-services.liquid
@@ -1763,7 +1763,7 @@ v    </div>
       },
       {
         "type": "image_picker",
-        "id": "shaves-image-1",
+        "id": "shave-image-1",
         "label": "Shaves 1 image"
       },
       {
@@ -1798,7 +1798,7 @@ v    </div>
       },
       {
         "type": "image_picker",
-        "id": "shaves-image-2",
+        "id": "shave-image-2",
         "label": "Shaves 2 image"
       },
       {
@@ -1833,7 +1833,7 @@ v    </div>
       },
       {
         "type": "image_picker",
-        "id": "shaves-image-3",
+        "id": "shave-image-3",
         "label": "Shaves 3 image"
       },
       {
@@ -1868,7 +1868,7 @@ v    </div>
       },
       {
         "type": "image_picker",
-        "id": "shaves-image-4",
+        "id": "shave-image-4",
         "label": "Shaves 4 image"
       },
       {
@@ -1903,7 +1903,7 @@ v    </div>
       },
       {
         "type": "image_picker",
-        "id": "shaves-image-5",
+        "id": "shave-image-5",
         "label": "Shaves 5 image"
       },
       {
