--- a/sections/main-video-banner.liquid
+++ b/sections/main-video-banner.liquid
@@ -12,9 +12,9 @@
 <div class="video-section-wrapper">
   
   <div class="frame-container">
-    <img class="bannerImg" src="{{section.settings.banner-image1| image_url: height:680 }}" style="width:100%;height: 100%;object-fit: cover;" alt="Banner slider image">
-    <img class="bannerImg" src="{{section.settings.banner-image2| image_url: height:680 }}" style="width:100%;height: 100%;object-fit: cover;"alt="Banner slider image">
-    <img class="bannerImg" src="{{section.settings.banner-image3| image_url: height:680 }}" style="width:100%;height: 100%;object-fit: cover;"alt="Banner slider image">
+    <img class="bannerImg" src="{{section.settings.banner-image1| image_url: width:1440 ,height:680 }}" style="width:100%;height: 100%;object-fit: cover;" alt="Banner slider image">
+    <img class="bannerImg" src="{{section.settings.banner-image2| image_url: width:1440 ,height:6800 }}" style="width:100%;height: 100%;object-fit: cover;"alt="Banner slider image">
+    <img class="bannerImg" src="{{section.settings.banner-image3| image_url: width:1440 ,height:680 }}" style="width:100%;height: 100%;object-fit: cover;"alt="Banner slider image">
     <!-- <video id="bannerVid" muted autoplay loop>
       <source src="{{'walkIn.mp4' | asset_url }}" type="video/mp4" >
     </video>     -->
