--- a/sections/main-values.liquid
+++ b/sections/main-values.liquid
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="values-video-wrapper">
-      <video id="valuesVideo" muted>
+      <video id="valuesVideo" >
         <source src="{{'walkIn.mp4' | asset_url }}" type="video/mp4" id="valuesVid">
       </video>
       <div class="video-controll-overlay" id="valuesOverlay">
