--- a/sections/services-styles.liquid
+++ b/sections/services-styles.liquid
@@ -6,7 +6,7 @@
       <div class="card-wrapper">
         <div class="video-card">
           <div class="video-wrapper">
-            <video id="video1" muted>
+            <video id="video1" >
               <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay1">
@@ -22,7 +22,7 @@
   
         <div class="video-card">
           <div class="video-wrapper">
-            <video id="video2" muted>
+            <video id="video2" >
               <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay2">
@@ -38,7 +38,7 @@
   
         <div class="video-card">
           <div class="video-wrapper">
-            <video id="video3" muted>
+            <video id="video3" >
               <source src="{{'videoCompressed3.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay3">
@@ -54,7 +54,7 @@
   
         <div class="video-card">
           <div class="video-wrapper">
-            <video id="video4" muted>
+            <video id="video4" >
               <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay4">
@@ -70,7 +70,7 @@
   
         <div class="video-card">
           <div class="video-wrapper">
-            <video id="video5" muted>
+            <video id="video5" >
               <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay5">
