--- a/sections/main-transformation.liquid
+++ b/sections/main-transformation.liquid
@@ -32,6 +32,7 @@
       </div>
     </div>
   </div>
+  {% if section.settings.show_slider_1 %}
   <div id="before-after-slider" class="mySlides slides">
     <div id="before-image" class="beforeImage">
       <img src="{{section.settings.beforeimage-1| image_url: height:674 }}" alt="before" class="object-fit-cover"/>
@@ -42,6 +43,8 @@
     </div>
     <div id="resizer" class="resizer"></div>
   </div>
+  {% endif %}
+  {% if section.settings.show_slider_2 %}
   <div id="before-after-slider" class="mySlides slides">
     <div id="before-image" class="beforeImage">
       <img src="{{section.settings.beforeimage-2| image_url: height:674}}" alt="before" class="object-fit-cover"/>
@@ -52,18 +55,234 @@
     </div>
     <div id="resizer" class="resizer"></div>
   </div>
+  {% endif %}
+  {% if section.settings.show_slider_3 %}
   <div id="before-after-slider" class="mySlides slides">
     <div id="before-image" class="beforeImage">
       <img src="{{section.settings.beforeimage-3| image_url: height:674}}" alt="before" class="object-fit-cover"/>
     </div>
     <div id="after-image" class="afterImage">
-      
       <img src="{{section.settings.afterimage-3| image_url: height:674}}" alt="After" class="object-fit-cover"/>
     </div>
     <div id="resizer" class="resizer"></div>
   </div>
+  {% endif %}
 </div>
-{{ 'main-transform.js'  | asset_url | script_tag     }}
+<script>
+  const slider = document.getElementsByClassName('slides');
+const before = document.getElementsByClassName('beforeImage');
+const after = document.getElementsByClassName('afterImage');
+const resizer = document.getElementsByClassName('resizer');
+var slideIndex = 1;
+let active = false;
+let slide_number= '{{ section.settings.slide_number }}'-1;
+console.log(slide_number)
+document.addEventListener("DOMContentLoaded", function () {
+  let width = slider[slideIndex - 1].offsetWidth;
+  let height = slider[slideIndex - 1].offsetHeight;
+
+  for (let i = 0; i <= slide_number; i++) {
+    var beforeImage = before[i].getElementsByTagName('img')[0];
+    var afterImage = after[i].getElementsByTagName('img')[0];
+    beforeImage.style.width = width + 'px';
+    beforeImage.style.height = '100%';
+    afterImage.style.width = width + 'px';
+    afterImage.style.height = '100%';
+  }
+
+}, { passive: false });
+
+window.addEventListener('resize', function () {
+  let width = slider[slideIndex - 1].offsetWidth;
+  let height = slider[slideIndex - 1].offsetHeight;
+  for(let k=0; k<=slide_number;k++){
+    resizer[k].style.left = width / 2 + "px";
+  before[k].style.width = width / 2 + "px";
+  }
+  
+  // resizer[1].style.left = width / 2 + "px";
+  // before[1].style.width = width / 2 + "px";
+  // resizer[2].style.left = width / 2 + "px";
+  // before[2].style.width = width / 2 + "px";
+  for (let i = 0; i <= 2; i++) {
+    var beforeImage = before[i].getElementsByTagName('img')[0];
+    var afterImage = after[i].getElementsByTagName('img')[0];
+    beforeImage.style.width = width + 'px';
+    beforeImage.style.height = '100%';
+    afterImage.style.width = width + 'px';
+    beforeImage.style.height = '100%';
+  }
+}, { passive: false })
+for(let j=0;j<=slide_number;j++){
+  resizer[j].addEventListener('mousedown', function () {
+  active = true;
+  resizer[j].classList.add('resize');
+
+}, { passive: false });
+}
+
+// resizer[1].addEventListener('mousedown', function () {
+//   active = true;
+//   resizer[1].classList.add('resize');
+
+// }, { passive: false });
+// resizer[2].addEventListener('mousedown', function () {
+//   active = true;
+//   resizer[2].classList.add('resize');
+
+// }, { passive: false });
+document.body.addEventListener('mouseup', function () {
+  active = false;
+  for(let h=0;h<=slide_number;h++){
+    resizer[h].classList.remove('resize');
+  }
+  
+  // resizer[1].classList.remove('resize');
+  // resizer[2].classList.remove('resize');
+}, { passive: false });
+
+document.body.addEventListener('mouseleave', function () {
+  active = false;
+  for(let h=0;h<=slide_number;h++){
+    resizer[h].classList.remove('resize');
+  }
+  
+  // resizer[1].classList.remove('resize');
+  // resizer[2].classList.remove('resize');
+}, { passive: false });
+
+
+document.body.addEventListener('mousemove', function (e) {
+  if (!active) return;
+  let x = e.pageX;
+  x -= slider[slideIndex - 1].getBoundingClientRect().left;
+  slideIt(x);
+  pauseEvent(e);
+}, { passive: false });
+for(let p=0;p<=slide_number;p++){
+  resizer[p].addEventListener('touchstart', function () {
+  active = true;
+  resizer[p].classList.add('resize');
+}, { passive: false });
+}
+
+// resizer[1].addEventListener('touchstart', function () {
+//   active = true;
+//   resizer[1].classList.add('resize');
+// }, { passive: false });
+// resizer[2].addEventListener('touchstart', function () {
+//   active = true;
+//   resizer[2].classList.add('resize');
+// }, { passive: false });
+
+document.body.addEventListener('touchend', function () {
+  active = false;
+  for(let p=0;p<=slide_number;p++){
+    resizer[p].classList.remove('resize');
+  }
+  
+  // resizer[1].classList.remove('resize');
+  // resizer[2].classList.remove('resize');
+}, { passive: false });
+
+document.body.addEventListener('touchcancel', function () {
+  active = false;
+  for(let p=0;p<=slide_number;p++){
+    resizer[p].classList.remove('resize');
+  }
+  
+  // resizer[1].classList.remove('resize');
+  // resizer[2].classList.remove('resize');
+}, { passive: false });
+
+//calculation for dragging on touch devices
+document.body.addEventListener('touchmove', function (e) {
+  if (!active) return;
+  let x;
+
+  let i;
+  for (i = 0; i < e.changedTouches.length; i++) {
+    x = e.changedTouches[i].pageX;
+  }
+
+  x -= slider[slideIndex - 1].getBoundingClientRect().left;
+  slideIt(x);
+  pauseEvent(e);
+}, { passive: false });
+
+function slideIt(x) {
+  let transform = Math.max(0, (Math.min(x, slider[slideIndex - 1].offsetWidth)));
+  before[slideIndex - 1].style.width = transform + "px";
+  resizer[slideIndex - 1].style.left = transform - 0 + "px";
+}
+
+//stop divs being selected.
+function pauseEvent(e) {
+  if (e.stopPropagation) e.stopPropagation();
+  if (e.preventDefault) e.preventDefault();
+  e.cancelBubble = true;
+  e.returnValue = false;
+  return false;
+}
+
+
+
+//slider controlls
+
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  if (n == (-1) && slideIndex != 1) {
+    showDivs(slideIndex += n);
+  }
+  if (n == 1 && slideIndex != 3) {
+    showDivs(slideIndex += n);
+  }
+
+}
+
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demo");
+  var prev = document.getElementsByClassName('prev-arrow')
+  var next = document.getElementsByClassName('next-arrow')
+  if (n > x.length) { slideIndex = 1 }
+  if (n < 1) { slideIndex = x.length }
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" background-white", "");
+  }
+  if (slideIndex == 1) {
+    prev[0].className += " blured";
+    prev[1].className += " blured";
+    next[0].className = next[0].className.replace(" blured", "");
+    next[1].className = next[1].className.replace(" blured", "");
+  }
+  if (slideIndex == 2) {
+    prev[0].className = prev[0].className.replace(" blured", "");
+    prev[1].className = prev[1].className.replace(" blured", "");
+    next[0].className = next[0].className.replace(" blured", "");
+    next[1].className = next[1].className.replace(" blured", "");
+  }
+  if (slideIndex == 3) {
+    next[0].className += " blured"
+    next[1].className += " blured"
+    prev[0].className = prev[0].className.replace(" blured", "");
+    prev[1].className = prev[1].className.replace(" blured", "");
+  }
+  x[slideIndex - 1].style.display = "block";
+  dots[slideIndex - 1].className += " background-white";
+  dots[slideIndex - 1 + 3].className += " background-white";
+}
+</script>
+<!-- {{ 'main-transform.js'  | asset_url | script_tag     }} -->
 {% schema %}
   {
     "name": "Transformation",
@@ -81,6 +300,18 @@
         "default":"Sure, you come to our shops for a great cut. But, it’s our mission to be even more than that. We believe that when you look your best, you feel and do your best, too. So, when we say “how can I help?”, we mean it."
       },
       {
+        "type": "number",
+        "id": "slide_number",
+        "label": "How many sliders? Important!",
+        "default": 1
+      },
+      {
+        "type": "checkbox",
+        "id": "show_slider_1",
+        "label": "Show slider 1",
+        "default": true
+      },
+      {
         "id": "beforeimage-1",
         "type": "image_picker",
         "label": "1st slider before image"
@@ -93,6 +324,12 @@
         
       },
       {
+        "type": "checkbox",
+        "id": "show_slider_2",
+        "label": "Show slider 2",
+        "default": false
+      },
+      {
         "id": "beforeimage-2",
         "type": "image_picker",
         "label": "2nd slider before image"
@@ -103,6 +340,12 @@
         "type": "image_picker",
         "label": "2nd slider after image"
         
+      },
+      {
+        "type": "checkbox",
+        "id": "show_slider_3",
+        "label": "Show slider 3",
+        "default": false
       },
       {
         "id": "beforeimage-3",
