--- a/assets/section-transformation.css
+++ b/assets/section-transformation.css
@@ -153,6 +153,7 @@ margin-right: 20px;
   .transform-heading{
     font-size: 30px;
     margin-bottom: 15px;
+    text-align: center;
   }
   .transform-text{
     font-size: 16px;
