--- a/sections/main-transformation.liquid
+++ b/sections/main-transformation.liquid
@@ -104,7 +104,7 @@ window.addEventListener('resize', function () {
   // before[1].style.width = width / 2 + "px";
   // resizer[2].style.left = width / 2 + "px";
   // before[2].style.width = width / 2 + "px";
-  for (let i = 0; i <= 2; i++) {
+  for (let i = 0; i <= slide_number; i++) {
     var beforeImage = before[i].getElementsByTagName('img')[0];
     var afterImage = after[i].getElementsByTagName('img')[0];
     beforeImage.style.width = width + 'px';
