--- a/assets/section-services.css
+++ b/assets/section-services.css
@@ -55,8 +55,7 @@
   margin-bottom: 55px;
   background-color: #C2DAEB;
   padding:0px 20px 40px 20px;
-  height: 529px;
-  max-height:529px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -82,6 +81,7 @@
   border-right: 1px solid rgba(255, 255, 255, 0.5);
   padding-top:50px;
   padding-bottom:50px;
+  min-width: 395px;
 }
 .service-heading{
   font-family: Bebas Neue,sans-serif;
@@ -266,6 +266,9 @@
     margin-right: 0;
     margin-left: 25px;
   }
+  .service-description-wrapper{
+    min-width: unset;
+  }
 }
 @media screen and (max-width:1300px){
   .services-wrapper{
@@ -294,6 +297,7 @@
     display: flex;
     align-items: center;
     overflow: hidden;
+
   }
   .service-image-wrapper{
     display: flex;
