--- a/assets/section-video-banner.css
+++ b/assets/section-video-banner.css
@@ -60,6 +60,7 @@ h1.banner-heading-h1{
   align-items: center;
   flex-direction: column;
   overflow-wrap: break-word;
+  background: rgba(94, 94, 94, 0.71);
 }
 #bannerVid{
   width: 100%;
