--- a/sections/main-feeling.liquid
+++ b/sections/main-feeling.liquid
@@ -7,7 +7,7 @@
     <div class="icon-grid">
       <div class="icon-div1">
         <div class="icon-wrapper">
-          <img class="icon" src="{{section.settings.feeling-icon-1| img_url: 'medium'}}"alt="Guaranteed satisfaction">
+          <img class="icon" src="{{'icon-satisfaction.svg' | asset_url }}"alt="Guaranteed satisfaction">
           <!-- {{'icon-satisfaction.svg'| asset_url | img_tag:'satisfaction logo','icon'}} -->
         </div>
         
@@ -15,19 +15,19 @@
       </div>
       <div class="icon-div2">
         <div class="icon-wrapper">
-          <img class="icon" src="{{section.settings.feeling-icon-2| img_url: 'medium'}}"alt="Outstanding service">
+          <img class="icon" src="{{'icon-mustache.svg' | asset_url }}"alt="Outstanding service">
         </div>
         <p class="icon-text">Outstanding service</p>
       </div>
       <div class="icon-div3">
         <div class="icon-wrapper">
-          <img class="icon" src="{{section.settings.feeling-icon-3| img_url: 'medium'}}"alt="Welcoming environment">
+          <img class="icon" src="{{'icon-handshake.svg' | asset_url }}"alt="Welcoming environment">
         </div>
         <p class="icon-text">Welcoming environment</p>
       </div>
       <div class="icon-div4">
         <div class="icon-wrapper">
-          <img class="icon" src="{{section.settings.feeling-icon-4| img_url: 'medium'}}"alt="Renewed confidence">
+          <img class="icon" src="{{'icon-confidence.svg' | asset_url }}"alt="Renewed confidence">
 
         </div>
         <p class="icon-text">Renewed confidence</p>
