--- a/assets/section-awards.css
+++ b/assets/section-awards.css
@@ -22,6 +22,7 @@ color: #242424;
 }
 .award-badge{
   background: url(awardBadge.png);
+  background-repeat: no-repeat;
   background-size: contain;
 filter: drop-shadow(0px 6px 4px rgba(0, 0, 0, 0.25));
 width: 220px;
@@ -64,8 +65,8 @@ font-size: 30px;
     
   } */
   .award-badge{
-    width: 220px;
-  height: 220px;
+    width: 280px;
+  height: 280px;
   bottom: 0%;
   }
 }
