--- a/assets/section-values.css
+++ b/assets/section-values.css
@@ -8,6 +8,16 @@
   align-items: center;
   background-color: rgba(108, 108, 108, 0.6);
 }
+.values-title{
+  font-family: Bebas Neue,sans-serif;
+font-style: normal;
+font-weight: normal;
+line-height: 150%;
+color: #242424;
+text-transform: uppercase;
+text-align: center;
+margin-top: 0;
+}
 .values-video-wrapper{
   max-width: 100%;
   max-height: 100%;
@@ -52,7 +62,10 @@ filter: drop-shadow(0px 10px 4px rgba(0, 0, 0, 0.25));
     align-items: center;
     margin-bottom: 70px;
     }
-    
+    .values-title{
+      font-size: 45px;
+      margin-bottom:20px;
+    }
     .values-div1 { grid-area: 1 / 1 / 2 / 4; }
     .values-div2 { grid-area: 1 / 4 / 2 / 7;
       display: flex;
@@ -81,7 +94,10 @@ filter: drop-shadow(0px 10px 4px rgba(0, 0, 0, 0.25));
     align-items: center;
     margin-bottom: 40px;
     }
-    
+    .values-title{
+      font-size: 30px;
+      margin-bottom:15px;
+    }
     .values-div1 { grid-area: 1 / 1 / 2 / 2; }
     .values-div2 { grid-area: 1 / 2 / 2 / 3;
       display: flex;
