--- a/sections/main-values.liquid
+++ b/sections/main-values.liquid
@@ -1,6 +1,7 @@
 {{ 'section-values.css' | asset_url | stylesheet_tag }}
 <div class="values-section-container">
   <div class="main-container">
+    <h2 class="values-title">{{ section.settings.values-title }}</h2>
     <div class="values-grid">
       <div class="values-div1">
         <img src="{{section.settings.icon-1| img_url: 'medium'}}" alt="Kurier logo" class="values-icon">
@@ -34,6 +35,12 @@
   {
     "name": "Values",
     "settings": [
+    {
+      "id": "values-title",
+      "type": "text",
+      "label": "Title",
+      "default":"As seen in"
+    },
       {
         "id": "icon-1",
         "type": "image_picker",
