--- a/sections/main-gallery.liquid
+++ b/sections/main-gallery.liquid
@@ -1,7 +1,7 @@
 {{ 'section-gallery.css' | asset_url | stylesheet_tag }}
 <div class="gallery-wrapper">
   <div class="gallery-content">
-    <h2 class="gallery-title">Our Gallery</h2>
+    <h2 class="gallery-title">{{page.title}}</h2>
       <div class="gallery-grid">
         {{page.content}}
       </div>
