--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -166,7 +166,7 @@ Pflegeleistungen!">
 </head>
 
   <body class="gradient">
-    
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MX9Z28J" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ "accessibility.skip_to_text" | t }}
     </a>
