--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -73,7 +73,7 @@
   <div class="header" id="myHeader" style="display: flex;">
     <div class="container-main" id="header-div">
       <div class="header-div1">
-        <h4 class="language-heading">EN</h4><span></span>
+        <!-- <h4 class="language-heading">EN</h4><span></span> -->
       </div>
       <div class="header-div2">
         <a href="{{ shop.url }}"><img  src="{{'logo-white.svg'| asset_url }}" alt="Brothers barbershop logo" class="header-logo"></a>
