--- a/assets/component-collection-hero.css
+++ b/assets/component-collection-hero.css
@@ -2,6 +2,9 @@
   background-color: rgba(var(--color-foreground), 0.04);
 }
 
+.collection-hero{
+  margin-top: 80px;
+}
 .collection-hero__inner {
   display: flex;
   flex-direction: column;
@@ -41,7 +44,16 @@
 }
 
 .collection-hero__title {
-  margin: 5rem 0 0;
+  font-family: Bebas Neue;
+font-style: normal;
+font-weight: normal;
+font-size: 45px;
+line-height: 130%;
+/* or 58px */
+
+
+color: #444444;
+  text-align: center;
 }
 
 .collection-hero__title + .collection-hero__description {
@@ -90,5 +102,10 @@
     flex: 1 0 50%;
     margin-left: 3rem;
     min-height: 20rem;
+  }
+}
+@media screen and (max-width:749px){
+  .collection-hero__title{
+    font-size: 30px;
   }
 }
