--- a/sections/main-videos.liquid
+++ b/sections/main-videos.liquid
@@ -6,7 +6,7 @@
     <div class="video-grid">
       <div class="video-div1">
         <div class="video-wrapper">
-          <video id="video1" >
+          <video id="video1" playsinline>
             <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay1">
@@ -21,7 +21,7 @@
       </div>
       <div class="video-div2">
         <div class="video-wrapper">
-          <video id="video2" >
+          <video id="video2" playsinline>
             <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay2">
@@ -36,7 +36,7 @@
       </div>
       <div class="video-div3">
         <div class="video-wrapper">
-          <video id="video3" >
+          <video id="video3" playsinline>
             <source src="{{'videoCompressed3.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay3">
