--- a/assets/section-services.css
+++ b/assets/section-services.css
@@ -82,6 +82,7 @@
   padding-top:50px;
   padding-bottom:50px;
   min-width: 395px;
+  width: 100%;
 }
 .service-heading{
   font-family: Bebas Neue,sans-serif;
