--- a/sections/main-reviews.liquid
+++ b/sections/main-reviews.liquid
@@ -1,88 +1,11 @@
-{{ 'section-cuts.css' | asset_url | stylesheet_tag }}
+{{ 'section-reviews.css' | asset_url | stylesheet_tag }}
 <div class="cuts-wrapper">
   <div class="cuts-content">
     <h2 class="cuts-title">{{ section.settings.service-styles-title }}</h2>
+    <h3 class="expectations-text">{{section.settings.review-text}}</h3>
     <div class="slides-wrapper">
       <div class="card-wrapper">
-        <div class="video-card">
-          <div class="video-wrapper">
-            <video id="video1" playsinline>
-              <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
-            </video>
-            <div class="video-controll-overlay" id="overlay1">
-              <div class="play-icon-wrapper video-section"id="play1">
-                <img src="{{'playIcon.svg'| asset_url }}"  class="play-button" alt="play button">
-              </div>
-            </div>
-          </div>
-          <h3 class="video-title">{{ section.settings.service-styles-heading1 }}</h3>
-          <p class="video-description">{{ section.settings.service-styles-description1 }}</p>
-          <p class="video-link">Learn More</p>
-        </div>
-  
-        <div class="video-card">
-          <div class="video-wrapper">
-            <video id="video2" playsinline>
-              <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
-            </video>
-            <div class="video-controll-overlay" id="overlay2">
-              <div class="play-icon-wrapper video-section"id="play2">
-                <img src="{{'playIcon.svg'| asset_url }}"  class="play-button" alt="play button">
-              </div>
-            </div>
-          </div>
-          <h3 class="video-title">{{ section.settings.service-styles-heading2 }}</h3>
-          <p class="video-description">{{ section.settings.service-styles-description2 }}</p>
-          <p class="video-link">Learn More</p>
-        </div>
-  
-        <div class="video-card">
-          <div class="video-wrapper">
-            <video id="video3" playsinline>
-              <source src="{{'videoCompressed3.mp4' | asset_url }}" type="video/mp4" id="vid">
-            </video>
-            <div class="video-controll-overlay" id="overlay3">
-              <div class="play-icon-wrapper video-section"id="play3">
-                <img src="{{'playIcon.svg'| asset_url }}"  class="play-button" alt="play button">
-              </div>
-            </div>
-          </div>
-          <h3 class="video-title">{{ section.settings.service-styles-heading3 }}</h3>
-          <p class="video-description">{{ section.settings.service-styles-description3 }}</p>
-          <p class="video-link">Learn More</p>
-        </div>
-  
-        <div class="video-card">
-          <div class="video-wrapper">
-            <video id="video4" playsinline>
-              <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
-            </video>
-            <div class="video-controll-overlay" id="overlay4">
-              <div class="play-icon-wrapper video-section"id="play4">
-                <img src="{{'playIcon.svg'| asset_url }}"  class="play-button" alt="play button">
-              </div>
-            </div>
-          </div>
-          <h3 class="video-title">{{ section.settings.service-styles-heading4 }}</h3>
-          <p class="video-description">{{ section.settings.service-styles-description4 }}</p>
-          <p class="video-link">Learn More</p>
-        </div>
-  
-        <div class="video-card">
-          <div class="video-wrapper">
-            <video id="video5" playsinline>
-              <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
-            </video>
-            <div class="video-controll-overlay" id="overlay5">
-              <div class="play-icon-wrapper video-section"id="play5">
-                <img src="{{'playIcon.svg'| asset_url }}"  class="play-button" alt="play button">
-              </div>
-            </div>
-          </div>
-          <h3 class="video-title">{{ section.settings.service-styles-heading5 }}</h3>
-          <p class="video-description">{{ section.settings.service-styles-description5 }}</p>
-          <p class="video-link">Learn More</p>
-        </div>
+        {{page.content}}
       </div>
       
 
@@ -93,81 +16,134 @@
     </div>
   </div>
 </div>
-{{ 'cuts-controll.js'  | asset_url | script_tag     }}
+<!-- {{ 'reviews-controll.js'  | asset_url | script_tag     }} -->
+<script>
+  var slideIndex = 0;
+  var parent = document.getElementsByClassName('card-wrapper')[0]
+  var children=parent.childNodes;
+  var childrenNew=[]
+  var length=childrenNew.length
+  
+  for(let i=1;i<children.length-1;i++){
+    childrenNew[i-1]=children[i];
+  }
+  var length=childrenNew.length
+  console.log("length=",length)
+  while(slideIndex!=length-3){
+    setInterval(showDivs,500,1)
+  }
+showDivs(slideIndex);
+while(slideIndex!=length-3){
+    setInterval(test,10000,1)
+  }
+function test (o){
+  console.log(o);
+}
+function plusDivs(n) {
+  console.log("plusDiv",slideIndex+n)
+  if (n == (-1) && slideIndex != 0) {
+    showDivs(slideIndex += n);
+  }
+  var scd = window.innerWidth;
+  if (scd > 1180) {
+  if (n == 1 && slideIndex != length-3) {
+    showDivs(slideIndex += n);
+  }
+  }else{
+  if (n == 1 && slideIndex != length-1) {
+    showDivs(slideIndex += n);
+  }
+}
+}
+
+function showDivs(n) {
+  var i;
+  var x = childrenNew;
+  var prev = document.getElementById('prev')
+  var next = document.getElementById('next')
+  var sc = window.innerWidth;
+  if (sc > 1180) {
+    for (i = 0; i < x.length; i++) {
+
+      if (i < n) {
+        x[i].style.display = "none";
+        continue
+      }
+      if (i > (n + 2)) {
+        x[i].style.display = "none";
+        continue
+      }
+      x[i].style.display = "block"
+
+    }
+    if (slideIndex == 0) {
+      prev.classList.add("icon-disaebled")
+    }
+    if (slideIndex != 0 && slideIndex != length-3) {
+      prev.classList.remove("icon-disaebled");
+      next.classList.remove("icon-disaebled");
+    }
+    if (slideIndex == length-3) {
+      next.classList.add("icon-disaebled");
+    }
+  } else {
+    for (i = 0; i < x.length; i++) {
+
+      if (i < n) {
+        x[i].style.display = "none";
+        continue
+      }
+      if (i > n) {
+        x[i].style.display = "none";
+        continue
+      }
+      x[i].style.display = "block"
+
+    }
+    if (slideIndex == 0) {
+      prev.classList.add("icon-disaebled")
+    }
+    if (slideIndex != 0 && slideIndex != length-1) {
+      prev.classList.remove("icon-disaebled");
+      next.classList.remove("icon-disaebled");
+    }
+    if (slideIndex == length-1) {
+      next.classList.add("icon-disaebled");
+    }
+  }
+}
+
+function resetSlider() {
+  if (window.innerWidth < 1180) {
+    showDivs(slideIndex);
+  }
+  if (window.innerWidth > 1180) {
+    showDivs(slideIndex);
+  }
+}
+
+window.onresize = resetSlider;
+</script>
 {% schema %}
   {
-    "name": "Servicestyles",
+    "name": "reviews",
     "settings": [
       {
         "id": "service-styles-title",
         "type": "text",
         "label": "Section title",
-        "default":"our styles"
+        "default":"Our reviews"
       },
       {
-        "id": "service-styles-heading1",
+        "id": "review-text",
         "type": "text",
-        "label": "Style 1 heading",
-        "default":"The style"
-      },
-      {
-        "id": "service-styles-description1",
-        "type": "text",
-        "label": "Style 1 description",
-        "default":"Short description  Short description"
-      },
-      {
-        "id": "service-styles-heading2",
-        "type": "text",
-        "label": "Style 2 heading",
-        "default":"The style"
-      },
-      {
-        "id": "service-styles-description2",
-        "type": "text",
-        "label": "Style 2 description",
-        "default":"Short description  Short description"
-      },
-      {
-        "id": "service-styles-heading3",
-        "type": "text",
-        "label": "Style 3 heading",
-        "default":"The style"
-      },
-      {
-        "id": "service-styles-description3",
-        "type": "text",
-        "label": "Style 3 description",
-        "default":"Short description  Short description"
-      },
-      {
-        "id": "service-styles-heading4",
-        "type": "text",
-        "label": "Style 4 heading",
-        "default":"The style"
-      },
-      {
-        "id": "service-styles-description4",
-        "type": "text",
-        "label": "Style 4 description",
-        "default":"Short description  Short description"
-      },
-      {
-        "id": "service-styles-heading5",
-        "type": "text",
-        "label": "Style 5 heading",
-        "default":"The style"
-      },
-      {
-        "id": "service-styles-description5",
-        "type": "text",
-        "label": "Style 5 description",
-        "default":"Short description  Short description"
+        "label": "Section text",
+        "default":"Read our 5 star reviews"
       }
     ],
     "presets": [
       {
-        "name": "Servicestyles"
+        "name": "rewievs"
       }
     ]
   }
