--- a/sections/main-reviews.liquid
+++ b/sections/main-reviews.liquid
@@ -28,6 +28,7 @@
     childrenNew[i-1]=children[i];
   }
   var length=childrenNew.length
+  showDivs(slideIndex)
   //console.log("length=",length)
 function plusDivs(n) {
   //console.log("plusDiv",slideIndex+n)
