--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -19,7 +19,7 @@
 {%- endif -%}
 <div class="giftcards-title-wrapper">
 <h2 class="giftcards-title">
-  GIVE GREAT CUT AND BIG SMILE TO YOUR FRIEND
+  {{section.settings.giftcards-title}}
 </h2>
 </div>
 <div class="giftcards-wrapper">
